--- a/src/app/businesscenter/bcform/bcform.component.html
+++ b/src/app/businesscenter/bcform/bcform.component.html
@@ -5,16 +5,16 @@
 </div>
 
 <div class="nav navbar-nav navbar-right">
-        <button type="button" class="btn btn-primary" (click)="SaveEntity()">儲存</button> | 
-        <button type="button" class="btn btn-default" onclick="location.href='#/bccenter';">返回</button>   
-        <p></p>    
+        <button type="button" class="btn btn-primary" (click)="SaveEntity()">儲存</button> |
+        <button type="button" class="btn btn-default" onclick="location.href='#/bccenter';">返回</button>
+        <p></p>
 </div>
 
 <div class="body-content">
 
         <table class="table table-bordered table-striped">
                 <tbody>
-            
+
                     <tr>
                         <td>
                             ID:
@@ -28,24 +28,32 @@
                                 商務中心名稱:
                         </td>
                         <td>
-                                <input [(ngModel)]="Entity.Name" #ctrl="ngModel" required name="entityname"  #fullName="ngModel" required> 
+                                <input [(ngModel)]="Entity.Company" #ctrl="ngModel" required name="entityname"  #fullName="ngModel" class="form-control" required>
                         </td>
                     </tr>
                     <tr>
+                      <td>
+                              商務中心名稱 英文:
+                      </td>
+                      <td>
+                              <input [(ngModel)]="Entity.Company_en" #ctrl="ngModel" required name="entityname_en"  #fullName="ngModel" class="form-control">
+                      </td>
+                  </tr>
+                    <!-- <tr>
                         <td>
                             介紹:
                         </td>
                         <td>
-                                <!--<input type="textarea" rows="4" [(ngModel)]="Entity.Intro" #ctrl="ngModel" required name="Intro" class="form-control"> -->
-                                <textarea class="form-control" 
+
+                                <textarea class="form-control"
                                 name="intro"
                                 rows="4"
                                 [(ngModel)]="Entity.Intro"
                                 #message='ngModel'
                                 ></textarea>
                         </td>
-                    </tr>
-                    <tr>
+                    </tr> -->
+                    <!-- <tr>
                         <td>
                                營業時間: <button type="button" class="btn btn-info" (click)="openBusinessHourModal()">編輯</button>
                         </td>
@@ -54,94 +62,104 @@
                                 <div fxFlex="100" fxLayout="column" fxLayoutAlign="space-around stretch" fxLayout.xs="column">
                                   <div *ngFor="let i of Entity.BusinessHours" fxFlex.xs="100" fxFlex.sm="50" fxFlex.md="33" fxFlex.lg="33" fxFlex.xl="33">
                                       {{i.Day}} : {{i.StartTime}} - {{i.EndTime}}
-                                  </div> 
+                                  </div>
                                 </div>
                               </div>
-            
+
+                        </td>
+                    </tr> -->
+
+                    <tr>
+                        <td>
+                            街:
+                        </td>
+                        <td>
+                                <input [(ngModel)]="Entity.Street" #ctrl="ngModel" name="address" class="form-control">
                         </td>
                     </tr>
                     <tr>
-                        <td>
-                            電話:
-                        </td>
-                        <td>
-                                <input [(ngModel)]="Entity.Phone" #ctrl="ngModel" name="phone"> 
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            地址:
-                        </td>
-                        <td>
-                                <input [(ngModel)]="Entity.Address" #ctrl="ngModel" name="address" class="form-control"> 
-                        </td>
-                    </tr>
-                    <tr>
-                        <td colspan="2">
-                                <table>
-                                        <tr>
-                                                <td>
-                                                        最低價格:
-                                                    </td>
-                                                    <td>
-                                                            <input type="number" [(ngModel)]="Entity.MinPrice" #ctrl="ngModel" name="minprice" class="form-control"> 
-                                                    </td>
-                                                    <td>
-                                                          ~
-                                                    </td>
-                                                    <td>
-                                                        最高價格:
-                                                    </td>
-                                                    <td>
-                                                            <input type="number" [(ngModel)]="Entity.MaxPrice" #ctrl="ngModel" name="maxprice" class="form-control"> 
-                                                </td>
-                                        </tr>
-                                    </table>
-                                 
-                        </td>
-                      
-                    </tr>
+                      <td>
+                          Street:
+                      </td>
+                      <td>
+                              <input [(ngModel)]="Entity.Street_en" #ctrl="ngModel" name="Street_en" class="form-control">
+                      </td>
+                  </tr>
+
                     <tr>
                             <td>
-                                電子郵件:
+                                市:
                             </td>
                             <td>
-                                    <input [(ngModel)]="Entity.Email" #ctrl="ngModel" name="Email"> 
+                                    <input [(ngModel)]="Entity.County" #ctrl="ngModel" name="County">
                             </td>
                     </tr>
                     <tr>
+                      <td>
+                          City:
+                      </td>
+                      <td>
+                              <input [(ngModel)]="Entity.County_en" #ctrl="ngModel" name="County_en">
+                      </td>
+              </tr>
+                    <tr>
                             <td>
-                                網站:
+                                區:
                             </td>
                             <td>
-                                    <input [(ngModel)]="Entity.WebSite" #ctrl="ngModel" name="Website"> 
+                                    <input [(ngModel)]="Entity.District" #ctrl="ngModel" name="District">
                             </td>
                     </tr>
+                    <tr>
+                      <td>
+                          District :
+                      </td>
+                      <td>
+                              <input [(ngModel)]="Entity.District_en" #ctrl="ngModel" name="District_en">
+                      </td>
+              </tr>
                     <tr>
                             <td>
                                 設備:  <button type="button" class="btn btn-info" (click)="openModal()">編輯</button>
                             </td>
                             <td>
-                                      
-                
+
+
                                         <div fxLayout="column" fxLayoutAlign=" none">
                                                 <div fxFlex="100" fxLayout="row wrap" fxLayoutAlign="space-around stretch" fxLayout.xs="column">
                                                   <div *ngFor="let i of Entity.Features" fxFlex.xs="100" fxFlex.sm="50" fxFlex.md="33" fxFlex.lg="33" fxFlex.xl="33">
-                                                       {{i.Name}} <img  [src]="i.Image_Url" style="height: 50px; width: 50px;">
+                                                       {{i.Name}} <img  src ="https://image.flaticon.com/icons/svg/1642/1642269.svg" style="height: 50px; width: 50px;">
                                                   </div>
                                                 </div>
                                         </div>
-                                            
-                                            
+
+
                             </td>
                         </tr>
+                        <tr>
+                          <td>
+                              空位數:
+                          </td>
+                          <td>
+                                  <input [(ngModel)]="Entity.DefaultSeats" #ctrl="ngModel" name="DefaultSeats">
+                          </td>
+                  </tr>
                     <tr>
                         <td>
-                            座標:
+                            座標:    <button type="button" class="btn btn-sm btn-primary" (click)="saveGPS()">更新GPS</button>
                         </td>
                         <td>
-                            <input [(ngModel)]="Entity.Coordinates" #ctrl="ngModel" name="Coordinates"> 
+                          Latitude  :  <input [(ngModel)]="Entity.Latitude " #ctrl="ngModel" name="Latitude ">
                         </td>
+                    </tr>
+
+                    <tr>
+                      <td>
+
+                      </td>
+                      <td>
+                        Longitude  :   <input [(ngModel)]="Entity.Longitude" #ctrl="ngModel" name="Longitude">
+                      </td>
                     </tr>
                     <tr>
                         <td colspan="2">
@@ -161,25 +179,25 @@
                                     (mapClick)="opengooglemap()"
                                 >
                                 </map-marker>
-                            
-                            
+
+
                                 </google-map>
                         </td>
                     </tr>
-               
+
                     <tr>
                         <td colspan="2">
                             圖片:
-                        
+
                                 <div class="center">
-                                        <ngx-file-drop dropZoneLabel="Drop files here" (onFileDrop)="dropped($event)" 
+                                        <ngx-file-drop dropZoneLabel="Drop files here" (onFileDrop)="dropped($event)"
                                         (onFileOver)="fileOver($event)" (onFileLeave)="fileLeave($event)">
                                             <ng-template ngx-file-drop-content-tmp let-openFileSelector="openFileSelector">
                                               拖曳或是選擇要上傳的圖片
                                               <button type="button" (click)="openFileSelector()">Browse Files</button>
                                             </ng-template>
                                         </ngx-file-drop>
-                                       
+
                                 </div>
                         </td>
                     </tr>
@@ -194,25 +212,25 @@
                                     </li>
                                 </ul>
                         </td>
-                    </tr>    
-                </tbody>   
+                    </tr>
+                </tbody>
                 </table>
-            
+
 
 
 
 </div>
 
-    
-    
-  
+
+
+
      <hr>
     <div class="nav navbar-nav navbar-right">
-            <button type="button" class="btn btn-primary" (click)="SaveEntity()">儲存</button> | 
-            <button type="button" class="btn btn-default" onclick="location.href='#/bccenter';">返回</button>       
+            <button type="button" class="btn btn-primary" (click)="SaveEntity()">儲存</button> |
+            <button type="button" class="btn btn-default" onclick="location.href='#/bccenter';">返回</button>
     </div>
 
-   
+
 
 
 <ngx-spinner
@@ -224,4 +242,3 @@
   <p style="font-size: 20px; color: white">處理中...</p>
 </ngx-spinner>
 
- 
