--- a/src/app/health/healthviewmodal/healthviewmodal.component.html
+++ b/src/app/health/healthviewmodal/healthviewmodal.component.html
@@ -66,6 +66,14 @@
                       {{blood.DateTime}}
                     </td>
                   </tr>
+                  <tr>
+                    <td>
+                      溫度 :
+                    </td>
+                    <td>
+                      {{blood.Comment}} c
+                    </td>
+                  </tr>
                 </table>
 
               </td>
