--- a/src/app/businesscenter/bclist/bclist.component.html
+++ b/src/app/businesscenter/bclist/bclist.component.html
@@ -12,7 +12,7 @@
     <button type="button" class="btn btn-primary" onclick="location.href='#/bcform';">新增</button>
   </div>
   <div class="col-sm-4">
-
+    <button type="button" class="btn btn-info" onclick="location.href='#/InHubLog';">WebJobs Logs</button>
   </div>
   <div class="col-sm-4">
     <button type="button" class="btn btn-primary" onclick="location.href='#/bcuser';">到使用者/會員管理</button>
