--- a/src/app/clientinventory/paymentform/paymentform.component.html
+++ b/src/app/clientinventory/paymentform/paymentform.component.html
@@ -46,7 +46,7 @@
       <tbody>
         <tr>
           <td>
-            目前倉儲庫存(片)
+            目前倉儲庫存(基本單位)
           </td>
           <td>
             <input [(ngModel)]="Entity.Info.TotalStock" #ctrl="ngModel" type="number" style="width: 60%;">
@@ -54,7 +54,7 @@
         </tr>
         <tr>
           <td>
-            目前管理費
+            每月目前管理費
           </td>
           <td>
               <input [(ngModel)]="Entity.Info.TotalFee" #ctrl="ngModel" type="number" style="width: 60%;">
@@ -77,7 +77,7 @@
         </tr>
         <tr>
           <td>
-            上次付費日期
+            上次付費日期  <button type="button" class="btn btn-warning" (click)="resetdates()" >重設日期</button>
           </td>
           <td>
             <div class="input-group">
