--- a/src/app/clientinventory/paymentlist/paymentlist.component.html
+++ b/src/app/clientinventory/paymentlist/paymentlist.component.html
@@ -13,7 +13,7 @@
 
   </div>
   <div class="col-sm-4">
-    <button type="button" class="btn btn-warning" (click)="updateUsers()">更新付款人名單</button>
+    <button type="button" class="btn btn-warning" (click)="updateUsers()">更新付款人名單和庫存數量</button>
   </div>
 </div>
 
@@ -35,10 +35,10 @@
           客戶名稱
       </th>
       <th>
-          目前庫存
+        目前倉儲庫存(基本單位)
       </th>
       <th>
-          目前管理費
+        每月目前管理費
       </th>
       <th>
           付款週期
