--- a/src/app/clientinventory/invshow/invshow.component.html
+++ b/src/app/clientinventory/invshow/invshow.component.html
@@ -64,7 +64,7 @@
           <table class="table table-bordered table-striped table-hover">
             <tr>
               <th>
-                倉儲管理費
+                每月倉儲管理費
               </th>
               <th>
                 上次付費日期
@@ -83,28 +83,30 @@
               <td>{{paymentInfo.Info.Comment}}</td>
             </tr>
             <tr>
-              <table>
-                <tbody>
-                  <tr *ngFor = 'let item of paymentInfo.InfoHistory; let x = index  ' >
-                    <td>
-                      {{item.Date}}
-                    </td>
-                    <td>
-                      {{item.Item}}
-                    </td>
-                    <td>
-                      {{item.PaymentType}}
-                    </td>
-                    <td>
-                      {{item.Amount}}
-                    </td>
-                    <td>
-                      {{item.Comment}}
-                    </td>
-                  </tr>
-                </tbody>
+              <td colspan="4">
+                <table>
+                  <tbody>
+                    <tr *ngFor = 'let item of paymentInfo.InfoHistory; let x = index  ' >
+                      <td>
+                        {{item.Date}}
+                      </td>
+                      <td>
+                        {{item.Item}}
+                      </td>
+                      <td>
+                        {{item.PaymentType}}
+                      </td>
+                      <td>
+                        {{item.Amount}}
+                      </td>
+                      <td>
+                        {{item.Comment}}
+                      </td>
+                    </tr>
+                  </tbody>
 
-              </table>
+                </table>
+              </td>
             </tr>
           </table>
         </div>
