--- a/src/app/businesscenter/login/login.component.html
+++ b/src/app/businesscenter/login/login.component.html
@@ -2,7 +2,9 @@
 <span> <img src='../assets/Photos/inhublogo.png' width=20% height=20% /></span>
 <p></p>
 
-
+<h3>
+  請用您的google 帳號登入, 如果資料庫管理員名單有符合您的Gmail 帳號, 則會登入成功
+</h3>
 <div>
   <div class="container mt-5">
     <h2>行動辦公室 App 後臺管理登入</h2>
@@ -12,10 +14,23 @@
               Login with Google
             </button>
       </div>
-    </div>
+     </div>
   </div>
+
+
 </div>
 
 
 
 
+
+
+
+<ngx-spinner
+  bdColor="rgba(51,51,51,0.8)"
+  size="medium"
+  color="#fff"
+  type="ball-scale-multiple"
+>
+  <p style="font-size: 20px; color: white">驗證中...</p>
+</ngx-spinner>
