--- a/src/app/stoneweight.component.html
+++ b/src/app/stoneweight.component.html
@@ -1,4 +1,7 @@
 <span><img src='../assets/Photos/NHCC.jpg' width=100% height=40% /></span>
+
+
+
 <table class="table table-bordered table-striped">
     <tr>
         <th>
@@ -14,44 +17,45 @@
             物體比重
         </th>
     </tr>
-    
+
         <tr>
             <td>
-    
+
             </td>
             <td>
                 <input type="number"
                 [(ngModel)]='airweight'
                 style="width: 6em;"
-                /> 
+                />
             </td>
             <td>
                 <input type="number"
-                [(ngModel)]='waterweight'  
+                [(ngModel)]='waterweight'
                 style="width: 6em;"
-                /> 
+                />
             </td>
             <td>
                 {{caculateweightrate()}}
             </td>
             <td>
-                <button class="btn btn-primary" (click) = 'addintolist()'>
+                <button mat-raised-button class="btn btn-primary" (click) = 'addintolist()'>
+                  <mat-icon>add</mat-icon>
                     新增
                  </button>
             </td>
         </tr>
 
-    <tbody> 
+    <tbody>
         <tr *ngFor = 'let item of weightList'>
-            
+
             <td>{{ item.id}}</td>
             <td>{{ item.airweight }}</td>
             <td>{{ item.waterweight}}</td>
             <td>{{ item.ratioweight}}</td>
-            
+
         </tr>
     </tbody>
-   
+
 
 
 </table>
@@ -59,13 +63,13 @@
 <table *ngIf="weightList?.length > 0">
     <tr>
         <td>
-            Email: 
+            Email:
         </td>
         <td>
             <input type="string"
-            [(ngModel)]='emailaddress'  
+            [(ngModel)]='emailaddress'
             style="width: 15em;"
-            /> 
+            />
         </td>
         <td>
             <span></span>
