--- a/src/app/linepair/list/list.component.html
+++ b/src/app/linepair/list/list.component.html
@@ -1,3 +1,63 @@
-<p>LINE PAIR ROCKS!</p>
+<div class="home-banner">
+  <div class="banner-container">
+    <div class="banner-image"></div>
+  </div>
+</div>
+<br>
 
-您的幸福就交給我們拉 !
+<div class="example-container mat-elevation-z8" >
+   <div class="example-header">
+     <mat-form-field>
+       <input matInput (keyup)="applyFilter($event.target.value)" placeholder="搜尋">
+     </mat-form-field>
+   </div>
+
+  <mat-table #table [dataSource]="dataSource"  multiTemplateDataRows>
+
+    <ng-container matColumnDef="{{column}}" *ngFor="let column of displayedColumns">
+      <th mat-header-cell *matHeaderCellDef> {{column}} </th>
+      <td mat-cell *matCellDef="let LinePairUser"> {{LinePairUser[column]}} </td>
+    </ng-container>
+
+     <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
+  <ng-container matColumnDef="expandedDetail">
+    <td mat-cell *matCellDef="let LinePairUser" [attr.colspan]="displayedColumns.length">
+      <div class="example-element-detail"
+           [@detailExpand]="LinePairUser == expandedElement ? 'expanded' : 'collapsed'">
+
+           <img src='{{LinePairUser.ImgLink}}'  style="width:10%;" >
+
+         <div class="example-element-diagram">
+          <div class="example-element-position">  {{LinePairUser.Height}} 公分 | {{LinePairUser.Weight}} 公斤 | {{LinePairUser.Email}}</div>
+
+          <div class="example-element-name"> {{LinePairUser.Married}} | {{LinePairUser.School}}| Line: {{LinePairUser.LineId}}</div>
+          <div class="example-element-weight">  </div>
+        </div>
+
+        <div class="example-element-description">
+          {{HasCar(LinePairUser.HasCar)}} |
+          {{HasHouse(LinePairUser.HasHouse)}} | 月薪: {{SalaryTerm(LinePairUser.SalaryRange)}} |
+          {{LinePairUser.Intro}} |
+          <button mat-raised-button	color="primary" class="btn-space" (click)="Edit(LinePairUser)"><mat-icon>edit</mat-icon> 編輯</button>
+          <button mat-raised-button	color="warn" (click)="Delete(LinePairUser)"><mat-icon>delete</mat-icon> 刪除</button>
+
+        </div>
+
+      </div>
+    </td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let LinePairUser; columns: displayedColumns;"
+      class="example-element-row"
+      [class.example-expanded-row]="LinePairUser === element"
+      (click)="expandedElement = expandedElement === LinePairUser ? null : LinePairUser">
+  </tr>
+  <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
+
+  </mat-table>
+
+  <mat-paginator #paginator [pageSize]="8" [pageSizeOptions] = "[5,10,20]">
+
+  </mat-paginator>
+</div>
