first complete linepair version 1.0.0

--- a/src/app/linepair/form/form.component.html
+++ b/src/app/linepair/form/form.component.html
@@ -305,7 +305,7 @@
             <p>
              Hello~ LinePair 很高興認識您, 請確認以下資料是否正確 <b>
 
-             </b> 您的電話是 {{Entity.Phone}} , 電子郵件是 {{Entity.Email}} , 居住在 {{Entity.City}} , 職業是 {{Entity.Occuptation}} ,
+             </b>姓名 {{Entity.Name}} 您的電話是 {{Entity.Phone}} , 電子郵件是 {{Entity.Email}} , 居住在 {{Entity.City}} , 職業是 {{Entity.Occuptation}} ,
              目前狀態是 {{Entity.Married}} , 自我介紹是 <b></b> {{Entity.Intro}}
             </p>
           </mat-card-content>
@@ -319,8 +319,6 @@
 
 
     </mat-vertical-stepper>
-
-
 
 
 </div>
