--- a/src/app/linepair/form/form.component.css
+++ b/src/app/linepair/form/form.component.css
@@ -9,7 +9,7 @@
   width: 100%;
   height: 100%;
   min-height: 150px; /* Added to show image */
-  background-image: url('./../../../assets/Photos/LinePairLogo.jpg');
+  background-image: url('./../../../assets/Photos/Line-Pair-Logo.png');
   background-position: center;
   background-repeat: no-repeat;
   display: inline-block;
