--- a/src/app/linepair/list/list.component.css
+++ b/src/app/linepair/list/list.component.css
@@ -54,7 +54,7 @@ tr.example-element-row:not(.example-expanded-row):active {
   padding: 8px;
   font-weight: lighter;
   margin: 8px 0;
-  height: 104px;
+  height: 100%;
 }
 
 .example-element-symbol {
@@ -82,9 +82,10 @@ tr.example-element-row:not(.example-expanded-row):active {
   width: 100%;
   height: 100%;
   min-height: 150px; /* Added to show image */
-  background-image: url('./../../../assets/Photos/LinePairLogo.jpg');
+  background-image: url('./../../../assets/Photos/Line-Pair-Logo.png');
   background-position: center;
   background-repeat: no-repeat;
+
   display: inline-block;
 }
 
@@ -92,4 +93,13 @@ tr.example-element-row:not(.example-expanded-row):active {
 
 .btn-space {
   margin-right: 5px;
+}
+
+.img {
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  padding: 5px;
+  width: 20%;
+  height: 80%;
+
 }
