--- a/src/app/linepair/arrangedialog/arrangedialog.component.html
+++ b/src/app/linepair/arrangedialog/arrangedialog.component.html
@@ -16,39 +16,41 @@
 
   <mat-card *ngFor="let info of Entity.Arranges ; let x = index">
 
-    <mat-form-field class="example-full-width">
-      <mat-label>日期</mat-label>
-      <input matInput [matDatepicker]="picker" [(ngModel)]="info.Date" >
-      <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-      <mat-datepicker touchUi #picker></mat-datepicker>
-    </mat-form-field>
+    <div class="border">
+      <mat-form-field class="example-full-width">
+        <mat-label>日期</mat-label>
+        <input matInput [matDatepicker]="picker" [(ngModel)]="info.Date" >
+        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+        <mat-datepicker touchUi #picker></mat-datepicker>
+      </mat-form-field>
 
 
 
-    <mat-form-field >
-      <mat-label>有興趣對象</mat-label>
-      <mat-select [(ngModel)]="info.InterestedId">
-        <mat-option *ngFor="let f of MaleGroup" [value]="f.Id">
-          {{f.Name}}  <img src='{{f.ImgLink}}'   class="smallimg" > {{Formatdate(f.Birthday)}}
-        </mat-option>
-      </mat-select>
-    </mat-form-field>
+      <mat-form-field >
+        <mat-label>有興趣對象</mat-label>
+        <mat-select [(ngModel)]="info.InterestedId">
+          <mat-option *ngFor="let f of MaleGroup" [value]="f.Id">
+            {{f.Name}}  <img src='{{f.ImgLink}}'   class="smallimg" > {{Formatdate(f.Birthday)}}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
 
-    <mat-form-field>
-      <mat-label>安排狀況</mat-label>
-      <input matInput type="string"
-      [(ngModel)]='info.ArrangeStatus'
-      />
-    </mat-form-field>
+      <mat-form-field>
+        <mat-label>安排狀況</mat-label>
+        <input matInput type="string"
+        [(ngModel)]='info.ArrangeStatus'
+        />
+      </mat-form-field>
 
-    <mat-form-field style="width: 60%;margin-right: 5px;">
-      <mat-label>結果</mat-label>
-      <textarea matInput [(ngModel)]="info.Result" ></textarea>
-    </mat-form-field>
+      <mat-form-field style="width: 60%;margin-right: 5px;">
+        <mat-label>結果</mat-label>
+        <textarea matInput [(ngModel)]="info.Result" ></textarea>
+      </mat-form-field>
 
+      <button mat-raised-button	color="warn" (click)="RemovePayment(x)"><mat-icon>delete</mat-icon> 刪除</button>
 
+    </div>
 
-    <button mat-raised-button	color="warn" (click)="RemovePayment(x)"><mat-icon>delete</mat-icon> 刪除</button>
 
   </mat-card>
 
