--- a/src/app/linepair/list/list.component.css
+++ b/src/app/linepair/list/list.component.css
@@ -81,7 +81,8 @@ tr.example-element-row:not(.example-expanded-row):active {
 .banner-image {
   width: 100%;
   height: 100%;
-  min-height: 150px; /* Added to show image */
+  min-height: 150px;
+  /* Added to show image */
   background-image: url('./../../../assets/Photos/Line-Pair-Logo.png');
   background-position: center;
   background-repeat: no-repeat;
@@ -101,5 +102,10 @@ tr.example-element-row:not(.example-expanded-row):active {
   padding: 5px;
   width: 20%;
   height: 80%;
+  cursor: pointer;
 
+}
+
+.pointer {
+  cursor: pointer;
 }
