--- a/src/app/linepair/list/list.component.html
+++ b/src/app/linepair/list/list.component.html
@@ -12,63 +12,72 @@
 </mat-radio-group>
 <br>
 <br>
-<div class="example-container mat-elevation-z8" >
-   <div class="example-header">
-     <mat-form-field>
-       <input matInput (keyup)="applyFilter($event.target.value)" placeholder="搜尋">
-     </mat-form-field>
-   </div>
+<div class="example-container mat-elevation-z8">
+  <div class="example-header">
+    <mat-form-field>
+      <input matInput (keyup)="applyFilter($event.target.value)" placeholder="搜尋">
+    </mat-form-field>
+  </div>
 
-  <mat-table #table [dataSource]="dataSource"  multiTemplateDataRows>
+  <mat-table #table [dataSource]="dataSource" multiTemplateDataRows>
 
     <ng-container matColumnDef="{{column}}" *ngFor="let column of displayedColumns">
       <th mat-header-cell *matHeaderCellDef> {{column}} </th>
       <td mat-cell *matCellDef="let LinePairUser"> {{LinePairUser[column]}} </td>
     </ng-container>
 
-     <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
-  <ng-container matColumnDef="expandedDetail">
-    <td mat-cell *matCellDef="let LinePairUser" [attr.colspan]="displayedColumns.length">
-      <div class="example-element-detail"
-           [@detailExpand]="LinePairUser == expandedElement ? 'expanded' : 'collapsed'">
+    <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
+    <ng-container matColumnDef="expandedDetail">
+      <td mat-cell *matCellDef="let LinePairUser" [attr.colspan]="displayedColumns.length">
+        <div class="example-element-detail"
+          [@detailExpand]="LinePairUser == expandedElement ? 'expanded' : 'collapsed'">
 
-           <img src='{{LinePairUser.ImgLink}}' class="img" >
+          <img src='{{LinePairUser.ImgLink}}' (click)='Show(LinePairUser)' class="img">
 
-         <div class="example-element-diagram">
-          <div class="example-element-position">  {{LinePairUser.Height}} 公分 | {{LinePairUser.Weight}} 公斤 </div>
+          <div class="example-element-diagram">
+            <div class="example-element-position"> {{LinePairUser.Height}} 公分 | {{LinePairUser.Weight}} 公斤 </div>
 
-          <div class="example-element-name"> {{LinePairUser.Married}} | {{LinePairUser.School}}</div>
-          <div class="example-element-weight">  Line: {{LinePairUser.LineId}} </div>
+            <div class="example-element-name"> {{LinePairUser.Married}} | {{LinePairUser.School}}</div>
+            <div class="example-element-weight"> Line: {{LinePairUser.LineId}} </div>
+          </div>
+
+          <div class="example-element-description">
+            {{LinePairUser.Email}} | {{HasCar(LinePairUser.HasCar)}} |
+            {{HasHouse(LinePairUser.HasHouse)}} | 月薪: {{SalaryTerm(LinePairUser.SalaryRange)}} |
+            {{LinePairUser.Intro}} |
+            <button mat-raised-button color="primary" class="btn-space" (click)="Edit(LinePairUser)">
+              <mat-icon>edit</mat-icon> 編輯
+            </button>
+
+            <button *ngIf="LinePairUser.Gender === '男性'" mat-raised-button color="accent" class="btn-space"
+              (click)="EditPayment(LinePairUser)">
+              <mat-icon>money</mat-icon> 付款
+            </button>
+            <button *ngIf="LinePairUser.Gender === '女性'" mat-raised-button color="accent" class="btn-space"
+              (click)="EditArrange(LinePairUser)">
+              <mat-icon>favorite</mat-icon> 配對安排
+            </button>
+
+            <button mat-raised-button color="warn" (click)="Delete(LinePairUser)">
+              <mat-icon>delete</mat-icon> 刪除
+            </button>
+
+          </div>
+
         </div>
+      </td>
+    </ng-container>
 
-        <div class="example-element-description">
-           {{LinePairUser.Email}} | {{HasCar(LinePairUser.HasCar)}} |
-          {{HasHouse(LinePairUser.HasHouse)}} | 月薪: {{SalaryTerm(LinePairUser.SalaryRange)}} |
-          {{LinePairUser.Intro}} |
-          <button mat-raised-button	color="primary" class="btn-space" (click)="Edit(LinePairUser)"><mat-icon>edit</mat-icon> 編輯</button>
-
-          <button  *ngIf="LinePairUser.Gender === '男性'" mat-raised-button	color="accent" class="btn-space" (click)="EditPayment(LinePairUser)"><mat-icon>money</mat-icon> 付款</button>
-          <button  *ngIf="LinePairUser.Gender === '女性'" mat-raised-button	color="accent" class="btn-space" (click)="EditArrange(LinePairUser)"><mat-icon>favorite</mat-icon> 配對安排</button>
-
-          <button mat-raised-button	color="warn" (click)="Delete(LinePairUser)"><mat-icon>delete</mat-icon> 刪除</button>
-
-        </div>
-
-      </div>
-    </td>
-  </ng-container>
-
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let LinePairUser; columns: displayedColumns;"
-      class="example-element-row"
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let LinePairUser; columns: displayedColumns;" class="example-element-row"
       [class.example-expanded-row]="LinePairUser === element"
       (click)="expandedElement = expandedElement === LinePairUser ? null : LinePairUser">
-  </tr>
-  <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
+    </tr>
+    <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
 
   </mat-table>
 
-  <mat-paginator #paginator [pageSize]="8" [pageSizeOptions] = "[5,10,20]">
+  <mat-paginator #paginator [pageSize]="8" [pageSizeOptions]="[5,10,20]">
 
   </mat-paginator>
 </div>
