--- a/src/app/clientinventory/portal/portal.component.html
+++ b/src/app/clientinventory/portal/portal.component.html
@@ -22,6 +22,9 @@
                                     <button class="button"  onclick="location.href='#/paymentlist';  "><i class="fa fa-address-book" ></i> 付費列表 </button>
                                    </div>
                                    <div class="col">
+                                    <button class="button"  onclick="location.href='#/searchtea';  "><i class="fa fa-search" ></i> 搜尋庫存 </button>
+                                   </div>
+                                   <div class="col">
                                                  <button class="button" onclick="location.href='#/uploadinvfile';"><i class="fa fa-cloud-upload"></i> 上傳檔案 (更新時間: {{LastUpdateTime}})</button>
                                    </div>
                                  </div>
