--- a/src/app/linepair/love/love.component.html
+++ b/src/app/linepair/love/love.component.html
@@ -1,6 +1,6 @@
 <div>
 
-<img class="img" src="../../../assets/Photos/Line-Pair-Thank-you-Page.jpg"/>
+<img class="img" src='{{Imgurl}}'/>
 
 </div>
 
