--- a/src/app/businesscenter/logview/logview.component.html
+++ b/src/app/businesscenter/logview/logview.component.html
@@ -32,7 +32,7 @@
 
       <tbody>
 
-          <tr *ngFor = 'let item of List | paginate: { itemsPerPage: 30, currentPage: p} ' >
+          <tr *ngFor = 'let item of List   ' >
               <td>
                   {{item.Name}}
               </td>
@@ -46,5 +46,5 @@
               </td>
           </tr>
       </tbody>
-      <pagination-controls (pageChange)="p = $event"></pagination-controls>
+
 </table>
