--- a/src/app/linepair/list/list.component.html
+++ b/src/app/linepair/list/list.component.html
@@ -6,7 +6,8 @@
 
 <a mat-stroked-button routerLink="/linepair" class="btn-space">到LinePair表單</a>
 <mat-radio-group aria-label="分流" [(ngModel)]='Filter' (ngModelChange)="FilterChange()">
-  <mat-radio-button value="1">男姓</mat-radio-button>
+  <mat-radio-button value="1">男姓會員</mat-radio-button>
+  <mat-radio-button value="3">男姓非會員</mat-radio-button>
   <mat-radio-button value="2">女性</mat-radio-button>
   <mat-radio-button value="0">全部</mat-radio-button>
 </mat-radio-group>
@@ -19,10 +20,10 @@
     </mat-form-field>
   </div>
 
-  <mat-table #table [dataSource]="dataSource" multiTemplateDataRows>
+  <mat-table #table [dataSource]="dataSource" matSort multiTemplateDataRows>
 
     <ng-container matColumnDef="{{column}}" *ngFor="let column of displayedColumns">
-      <th mat-header-cell *matHeaderCellDef> {{column}} </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> {{column}} </th>
       <td mat-cell *matCellDef="let LinePairUser"> {{LinePairUser[column]}} </td>
     </ng-container>
 
